# VAE

./: .env.example  .gitattributes  .gitignore  IMPROVEMENTS.md  README.md  pyproject.toml  requirements.txt
checkpoints/: calibration_stats.json  mlp_classifier.pt  vae_guardrail_best.pt  vae_guardrail_latest.pt
data/: eval.jsonl  eval_attacks.jsonl  eval_benign.jsonl  prompt_injection_test_dataset.csv  prompt_injection_test_dataset_predictions.csv  train.jsonl  train_benign.jsonl
data/embed_cache/: eval_5db71bc4b398.pt  eval_e3a4cfa18357.pt  train_b5e7b4e80bf0.pt  train_f3f076e2b14d.pt
prompt_injection/: __init__.py  config.py  dataset.py  evaluate.py  evaluate_csv.py  feature_engineering.py  generate_data.py  model.py  predict.py  train.py  web_server.py
prompt_injection/web/: index.html  style.css
tests/: test_api.py  test_data.py  test_data_gen.py  test_model.py  test_structural.py
vae_guardrail/: __init__.py  config.py
vae_guardrail/api/: __init__.py  schemas.py  server.py
vae_guardrail/filters/: __init__.py  cascade.py  structural.py  vector_guard.py
vae_guardrail/integration/: __init__.py  hooks.py
vae_guardrail/model/: __init__.py  vae.py
vae_guardrail/scoring/: __init__.py  calibration.py  scorer.py
vae_guardrail/training/: __init__.py  dataset.py  generate_data.py  train.py
