[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vae-guardrail"
version = "0.1.0"
description = "Language VAE Prompt Injection Guardrail — Unsupervised anomaly detection for LLM safety"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Vivek"},
]

dependencies = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
]

[project.scripts]
vae-train = "vae_guardrail.training.train:main"
vae-serve = "vae_guardrail.api.server:main"
vae-calibrate = "vae_guardrail.scoring.calibration:main"

[tool.setuptools.packages.find]
include = ["vae_guardrail*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
